[package]
name = "srscheck"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0.0"
chrono = { version = "0.4.39", features = ["serde", "unstable-locales"] }
log = "0.4.25"
comfy-table = "7.1.3"
sys-locale = "0.3.2"
