[package]
name = "srscheck"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6.0.0"
chrono = { version = "0.4.39", features = ["serde", "unstable-locales"] }
comfy-table = "7.1.3"
sys-locale = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.19"
cookie = "0.18.1"
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
